clean up boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html ng-app="citizenshipFlash" ng-strict-di>
   <head>
     <meta charset="utf-8">
+    <base href="/" target="_blank" />
     <title>citizenshipFlash</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
