Refactor app structure

--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,11 @@
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <div ng-controller="MainCtrl as ctrl">
+      {{ctrl.test}}
 
       <div ui-view></div>
-
-      <script src="js/main.js"></script>
+    </div>
+      <script src="js/cz-flash.js"></script>
   </body>
 </html>
